2006-02-19  Ankit Jain  <jankit@novell.com>

	* CodeGen.cs (CodeGen.Write): Use only filename as the name of the
	module.
	* TypeDef.cs (TypeDef.ResolveAsMethodRef): New.
	(TypeDef.ResolveMethod): Change signature to take ret_type, params
	etc instead of a signature string. Also, if the method does not exist,
	then use ResolveAsMethodRef to return a MethodRef for it.
	(TypeDef.ResolveVarargMethod): Likewise.
	(TypeDef.ResolveField): Likewise.
	* MethodRef.cs (MethodRef.Resolve): Update use of TypeDef.Resolve*
	methods.
	* FieldRef.cs (FieldRef.Resolve): Update use of TypeDef.ResolveField.
	* PropertyDef.cs (PropertyDef.AsMethodDef): Throws an exception is the
	method is not a MethodDef.
	(PropertyDef.Define): Use AsMethodDef to ensure that get/set/other are
	MethodDefs.
	* EventDef.cs (EventDef.AsMethodDef): Same as PropertyDef.
	(EventDef.Define): Likewise.    
 
2006-02-19  Ankit Jain  <jankit@novell.com>

	* CodeGen.cs (CodeGen.ThisModule): New.
	(CodeGen.Write): Set module name if not set by '.module' directive.
	* Module.cs: Inherit from ExternRef. 

2006-02-10  Ankit Jain  <jankit@novell.com>

	* CodeGen.cs (CodeGen.ResolveMethod): Throw exception if global method
	not found.
	(CodeGen.ResolveField): Likewise for global field.

2006-02-08  Ankit Jain  <jankit@novell.com>

	* PeapiTypeRef.cs (PeapiTypeRef.MakeBoundArray): Simplify and fix
	behavior.

2006-01-31  Ankit Jain  <jankit@novell.com>

	* TypeDef.cs (TypeDef.AddMethodDef): Throw exception with proper message
	if adding a duplicate method.

2006-01-31  Ankit Jain  <jankit@novell.com>

	* InstrTable.cs (inst_table): Add 'readonly.' .

2006-01-31  Ankit Jain  <jankit@novell.com>

	* ExternTable.cs (ExternTable.GetTypeRef): If type is from an 
	undeclared assembly, then add reference to the assembly.

2006-01-28  Ankit Jain  <jankit@novell.com>

	* MethodDef.cs:
	* TypeManager.cs:
	* MethodPointerTypeRef.cs:
	* ExternMethodRef.cs: Remove unused variables to fix warnings.
